<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".user.account.AccountActivity"
    android:background="@drawable/screen_bg"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/user_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/userHome"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#ffffff"/>
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center">
        <com.pkmmte.view.CircularImageView
            android:id="@+id/user_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerInside"
            app:border="true"
            app:border_color="#33d0d0d0"
            app:border_width="8dp"
            android:src="@drawable/user_icon"
            app:selector="true"
            app:selector_stroke_color="#99f0f0f0"
            app:selector_stroke_width="8dp"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_margin="6dp"
        android:background="#99d0d0d0"/>
    <TextView
        android:id="@+id/user_acount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_user_on"
        android:text="@string/acount"
        android:padding="12dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_margin="6dp"
        android:background="#99d0d0d0"/>
    <TextView
        android:id="@+id/user_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_lock_close"
        android:text="@string/password"
        android:padding="12dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_margin="6dp"
        android:background="#99d0d0d0"/>
    <TextView
        android:id="@+id/user_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_update"
        android:text="@string/update"
        android:padding="12dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_margin="6dp"
        android:background="#99d0d0d0"/>
    <TextView
        android:id="@+id/user_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_exit"
        android:text="@string/exit"
        android:padding="12dp"
        android:drawablePadding="10dp"
        android:textColor="#ffffff"
        android:gravity="center_vertical"/>

</LinearLayout>
